--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html><!-- InstanceBegin template="/Templates/tpl.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="tpl.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -133,7 +133,7 @@ function myTimer(){
 	document.getElementById("time").innerHTML=t;
 
         var oimg=document.getElementById("ipic");
-        oimg.src="../image/vimg.jpg?"+Math.random();
+        oimg.src="../vimg.jpg?"+Math.random();
 //http请求xml文件
     var xmlhttp;
     if (window.XMLHttpRequest)
