--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html><!-- InstanceBegin template="tpl.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="../tpl.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
