--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <td height="315" colspan="2"><table width="100%" border="1">
         <tbody>
           <tr>
-            <td height="220" colspan="5"><img src="../image/headwhite.png" width="1380" height="166" alt=""/></td>
+            <td height="220" colspan="5"><img src="../headwhite.png" width="1380" height="166" alt=""/></td>
           </tr>
         <tr>
           <td width="20%" valign="bottom" style="font-family: '楷体'; font-size: 24px; text-align: center;"><p><a href="index.html">实时数据</a></p>
