--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-<link href="../style/index.css" rel="stylesheet" type="text/css">
+<link href="../index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
